# printzet-backend/models/Category.js
@@ -1,34 +1,30 @@
-import mongoose from "mongoose";
+import mongoose from 'mongoose';
 
 const categorySchema = new mongoose.Schema({
-  id: { type: String, required: true },  
-  name: { type: String, required: true },
-  description: String,
-  paperSize: String,
-  image: String,
-
-  subcategories: [
-    {
-      id: { type: String, required: true },  
-      name: { type: String, required: true },
-      description: String,
-      image: String,
-    },
-  ],
-
-  colorType: { type: mongoose.Schema.Types.Mixed },
-  costPerCopy: { type: mongoose.Schema.Types.Mixed },
-  paperTypes: { type: mongoose.Schema.Types.Mixed },
-  printQualities: { type: mongoose.Schema.Types.Mixed },
-  printedSides: { type: mongoose.Schema.Types.Mixed },
-  bindingOptions: { type: mongoose.Schema.Types.Mixed },
-  laminationOptions: { type: mongoose.Schema.Types.Mixed },
-  pageOrientations: { type: mongoose.Schema.Types.Mixed },
-  coverPages: { type: mongoose.Schema.Types.Mixed },
-
-  dynamicPricing: Boolean,
-  cost: Number,
+    id: { type: String, required: true },
+    name: { type: String, required: true },
+    description: { type: String },
+    paperSize: { type: String },
+    image: { type: String },
+    subcategories: [{
+        id: { type: String, required: true },
+        name: { type: String, required: true },
+        description: { type: String },
+        image: { type: String },
+    }],
+    colorType: { type: Object },
+    costPerCopy: { type: Object }, // Restructured to use subcategory IDs as keys
+    paperTypes: { type: Object },
+    printQualities: { type: Object },
+    printedSides: { type: Object },
+    bindingOptions: { type: Object },
+    laminationOptions: { type: Object },
+    pageOrientations: { type: Object },
+    printedSides: { type: Object },
+    coverPages: { type: Object },
+    dynamicPricing: { type: Boolean },
+    cost: { type: Number },
 });
 
-const Category = mongoose.model("Category", categorySchema);
+const Category = mongoose.model('Category', categorySchema);
 export default Category;
